# chirp-rs

./: .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  DISCLAIMER.md  GUI_FRAMEWORK.md  PROGRESS.md  RADIO_DUMP_TOOL.md  README.md  UPLOAD_FIX.md  build-gui-release.ps1  build-gui.ps1  build.rs  deploy-gui.ps1  justfile  run-gui.ps1
docs/: THD75_PROTOCOL.md
docs/fixes/: DYNAMIC_POWER_FIELD.md  UV5R_BYTE12_BUG_FIX.md  UV5R_COMPLETE_FIXES.md  UV5R_FIX_SUMMARY.md  UV5R_OFFSET_BUG_FIX.md  UV5R_PARSING_FIX.md  UV5R_POWER_ENCODING_FIX.md  UV5R_SAVE_FIX.md  UV5R_UPLOAD_BUG_FIX.md
src/: lib.rs  main.rs
src/bitwise/: README.md  bcd.rs  elements.rs  mod.rs  parser.rs  types.rs
src/core/: constants.rs  features.rs  memory.rs  mod.rs  power.rs  validation.rs
src/drivers/: ic9700.rs  mod.rs  registry.rs  thd75.rs  traits.rs  uv5r.rs
src/formats/: csv.rs  img.rs  metadata.rs  mod.rs
src/gui/: app.rs  dialogs.rs  messages.rs  mod.rs  qt_gui.rs  radio_ops.rs
src/memmap/: memory_map.rs  mod.rs
src/serial/: README.md  civ_protocol.rs  comm.rs  mock.rs  mod.rs  protocol.rs
test_data/: Baofeng_UV-5R_20260211.img  Kenwood_TH-D75_20260207.csv  Kenwood_TH-D75_20260207.img  memfmt.txt  radio_dump.hex  updated.img
