[package]
name = "chirp-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chirp-rs"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "parse-memory"
path = "src/bin/parse_memory.rs"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
inventory = "0.3.21"
lazy_static = "1.5.0"
nom = "8.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serialport = "4.8.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
console-subscriber = "0.4.1"

[dev-dependencies]
base64 = "0.22.1"
tempfile = "3.24.0"

[features]
default = []
gui = ["dep:qmetaobject", "dep:cpp"]

# GUI dependencies (optional, enabled with --features gui)
[dependencies.qmetaobject]
version = "0.2"
optional = true

[dependencies.cpp]
version = "0.5"
optional = true

[build-dependencies]
cpp_build = "0.5"
